fixed page 5 spacing and fontsize

--- a/scss/pages/page2.scss
+++ b/scss/pages/page2.scss
@@ -25,7 +25,7 @@
 }
 
 .table-content--row__number {
-  width: 36px;
+  width: 60px;
   line-height: 1;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .table-content--row__text {
-  width: 364px;
+  width: 340px;
   font-size: 18px;
   font-weight: 600;
   min-height: 36px;
