--- a/scss/pages/page5.scss
+++ b/scss/pages/page5.scss
@@ -41,7 +41,7 @@ $yellow: #fffde5;
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        padding: 0 5%;
+        padding: 0 2%;
         &__title {
           font-size: 36px;
           font-weight: 700;
@@ -50,7 +50,7 @@ $yellow: #fffde5;
           text-align: left;
         }
         &__subtitle {
-          font-size: 20px;
+          font-size: 18px;
           font-weight: 700;
           line-height: 1.5;
         }
@@ -61,17 +61,23 @@ $yellow: #fffde5;
       }
       &__right {
         width: 70%;
-        padding: 0 8%;
+        padding: 0 4%;
         padding-bottom: 20px;
         display: flex;
         justify-content: space-between;
         align-items: stretch;
         flex-wrap: wrap;
         &__card {
-          width: 30%;
+          width: 33%;
           background: $mint;
           padding: 16px;
           margin: 10px;
+          h3 {
+            font-size: 16px;
+          }
+          p {
+            font-size: 12px;
+          }
 
           &.card-bg--3 {
             background: rgba($mint, 0.3);
